--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://bero285.github.io/starwars-Api-Task",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -39,4 +43,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
+  
 }
