--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://bero285.github.io/starwars-Api-Task",
+  "homepage": "https://bero285.github.io/star-wars-Api-Task/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -20,7 +20,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +42,4 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
-  
 }
